--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -12,7 +12,7 @@ jobs:
           - ubuntu-latest
           # - macos-latest
     steps:
-      - uses: actions/checkout@v2
+      # - uses: actions/checkout@v2
       - run: |
             exit 1
       - name: keepalive to debug
