--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -15,7 +15,7 @@ jobs:
       # - uses: actions/checkout@v2
       - run: |
             exit 1
-      - name: keep alive to debug
+      - name: keep alive to test
         if: ${{ failure() }}
         uses: PMET-public/action-tmate@master
         # env: # for private repos if not checked out (unusual)
